<resources>
    <string name="app_name">SmartHome</string>
    <string name="version_info">Copyright © 2017 SmartHome.</string>
    <string name="administrator_hint">请输入管理员账号</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="register_email_hint">请输入邮箱地址</string>
    <string name="fdps_register_email_hint">注册邮箱</string>
    <string name="fdps_register_email_button">发送验证邮箱</string>
    <string name="login">登录</string>
    <string name="register">新用户注册</string>
    <string name="register_button">注册</string>
    <string name="start_slogan">智能家居 悦享生活</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register_account">账户</string>
    <string name="register_pwd">密码 </string>
    <string name="error_password_length">密码不能小于6位</string>
    <string name="register_email">邮箱 </string>
    <string name="error_validate_email_address">邮箱地址格式错误</string>
    <string name="verify_email_has_sended">验证邮件已经发送</string>
    <string name="error_password_null">密码不能为空</string>
    <string name="error_username_null">用户名不能为空</string>
    <string name="error_email_address_null">邮箱地址不能为空</string>
    <string name="logout">退出登录</string>
    <string name="query">查询</string>
    <string name="add_device">添加设备</string>
    <string name="wifi_ssid"> wifi-ssid :</string>
    <string name="wifi_password">password</string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="spinnerTaskResultCountTitle">task result count</string>
    <string name="stvConfirm">Confirm</string>
</resources>