<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mu">

    <ImageView
        android:visibility="gone"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/start_logo_meitu_3" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        app:hintTextAppearance="@style/hintAppearance">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:imeOptions="actionNext" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/hintAppearance"
        app:passwordToggleTint="@color/light_text_gray">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tie_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <com.allen.library.SuperButton
        android:id="@+id/sbt_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/login"
        app:sCornersRadius="12dp"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large"
        app:sUseSelector="true"
        app:sSelectorPressedColor="@color/skyblue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <Button
            style="@style/Login_Button"
            android:id="@+id/btn_forget_password"
            android:background="@color/transparent"
            android:text="@string/forget_password" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            style="@style/Login_Button"
            android:id="@+id/btn_new_register"
            android:background="@color/transparent"
            android:text="@string/register" />
    </LinearLayout>
</LinearLayout>